carga BBDD completa

--- a/notebooks/final.ipynb
+++ b/notebooks/final.ipynb
@@ -2534,6 +2534,388 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(0)"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_final.duplicated().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id_reserva</th>\n",
+       "      <th>id_cliente</th>\n",
+       "      <th>nombre</th>\n",
+       "      <th>apellido</th>\n",
+       "      <th>mail</th>\n",
+       "      <th>competencia</th>\n",
+       "      <th>fecha_reserva</th>\n",
+       "      <th>inicio_estancia</th>\n",
+       "      <th>final_estancia</th>\n",
+       "      <th>id_hotel</th>\n",
+       "      <th>precio_noche</th>\n",
+       "      <th>nombre_hotel</th>\n",
+       "      <th>valoracion</th>\n",
+       "      <th>ciudad</th>\n",
+       "      <th>nombre_completo</th>\n",
+       "      <th>nombre_completo_mail</th>\n",
+       "      <th>id_ciudad</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>40c4cb55-d1f5-407b-832f-4756b8ff77b4</td>\n",
+       "      <td>9063</td>\n",
+       "      <td>Maite</td>\n",
+       "      <td>Calatayud</td>\n",
+       "      <td>maite.calatayud@example.com</td>\n",
+       "      <td>False</td>\n",
+       "      <td>2025-02-09</td>\n",
+       "      <td>2025-03-01</td>\n",
+       "      <td>2025-03-02</td>\n",
+       "      <td>12</td>\n",
+       "      <td>119.96</td>\n",
+       "      <td>Hotel Monte Verde</td>\n",
+       "      <td>3.10</td>\n",
+       "      <td>Madrid</td>\n",
+       "      <td>Maite Calatayud</td>\n",
+       "      <td>Maite Calatayud maite.calatayud@example.com</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>f2ce8df5-7844-43e1-8c0f-97ce7a208f21</td>\n",
+       "      <td>13646</td>\n",
+       "      <td>Tecla</td>\n",
+       "      <td>Bonet</td>\n",
+       "      <td>tecla.bonet@example.com</td>\n",
+       "      <td>False</td>\n",
+       "      <td>2025-02-08</td>\n",
+       "      <td>2025-03-01</td>\n",
+       "      <td>2025-03-02</td>\n",
+       "      <td>2</td>\n",
+       "      <td>211.53</td>\n",
+       "      <td>Hotel Brisas del Mar</td>\n",
+       "      <td>3.09</td>\n",
+       "      <td>Madrid</td>\n",
+       "      <td>Tecla Bonet</td>\n",
+       "      <td>Tecla Bonet tecla.bonet@example.com</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>57d4515a-447d-4067-afcb-9bdcf4e4e915</td>\n",
+       "      <td>993</td>\n",
+       "      <td>Amílcar</td>\n",
+       "      <td>Andrés</td>\n",
+       "      <td>amílcar.andrés@example.com</td>\n",
+       "      <td>False</td>\n",
+       "      <td>2025-02-02</td>\n",
+       "      <td>2025-03-01</td>\n",
+       "      <td>2025-03-02</td>\n",
+       "      <td>3</td>\n",
+       "      <td>378.37</td>\n",
+       "      <td>Hotel Camino del Sol</td>\n",
+       "      <td>3.07</td>\n",
+       "      <td>Madrid</td>\n",
+       "      <td>Amílcar Andrés</td>\n",
+       "      <td>Amílcar Andrés amílcar.andrés@example.com</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>ccbd9fe9-5a60-4f6f-bed3-73a7158ecba7</td>\n",
+       "      <td>7371</td>\n",
+       "      <td>Joan</td>\n",
+       "      <td>Vazquez</td>\n",
+       "      <td>joan.vazquez@example.com</td>\n",
+       "      <td>False</td>\n",
+       "      <td>2025-02-08</td>\n",
+       "      <td>2025-03-01</td>\n",
+       "      <td>2025-03-02</td>\n",
+       "      <td>14</td>\n",
+       "      <td>85.45</td>\n",
+       "      <td>Hotel Puerta del Cielo</td>\n",
+       "      <td>3.03</td>\n",
+       "      <td>Madrid</td>\n",
+       "      <td>Joan Vazquez</td>\n",
+       "      <td>Joan Vazquez joan.vazquez@example.com</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>99c3dc4f-663c-45f7-849a-ac9313f3746a</td>\n",
+       "      <td>2839</td>\n",
+       "      <td>Chelo</td>\n",
+       "      <td>Flor</td>\n",
+       "      <td>chelo.flor@example.com</td>\n",
+       "      <td>False</td>\n",
+       "      <td>2025-02-09</td>\n",
+       "      <td>2025-03-01</td>\n",
+       "      <td>2025-03-02</td>\n",
+       "      <td>5</td>\n",
+       "      <td>309.80</td>\n",
+       "      <td>Hotel Encanto Real</td>\n",
+       "      <td>3.03</td>\n",
+       "      <td>Madrid</td>\n",
+       "      <td>Chelo Flor</td>\n",
+       "      <td>Chelo Flor chelo.flor@example.com</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14995</th>\n",
+       "      <td>e856adee-838c-4031-920c-05ec5f1e32e6</td>\n",
+       "      <td>7312</td>\n",
+       "      <td>Jesusa</td>\n",
+       "      <td>Espinosa</td>\n",
+       "      <td>jesusa.espinosa@example.com</td>\n",
+       "      <td>True</td>\n",
+       "      <td>2025-02-26</td>\n",
+       "      <td>2025-03-01</td>\n",
+       "      <td>2025-03-02</td>\n",
+       "      <td>135</td>\n",
+       "      <td>107.00</td>\n",
+       "      <td>ibis budget Madrid Vallecas</td>\n",
+       "      <td>4.30</td>\n",
+       "      <td>Madrid</td>\n",
+       "      <td>Jesusa Espinosa</td>\n",
+       "      <td>Jesusa Espinosa jesusa.espinosa@example.com</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14996</th>\n",
+       "      <td>77134049-6e4f-49b0-a6f8-93b7466b1c22</td>\n",
+       "      <td>3479</td>\n",
+       "      <td>Cruz</td>\n",
+       "      <td>Hurtado</td>\n",
+       "      <td>cruz.hurtado@example.com</td>\n",
+       "      <td>True</td>\n",
+       "      <td>2025-02-26</td>\n",
+       "      <td>2025-03-01</td>\n",
+       "      <td>2025-03-02</td>\n",
+       "      <td>128</td>\n",
+       "      <td>95.00</td>\n",
+       "      <td>ibis budget Madrid Calle Alcalá</td>\n",
+       "      <td>4.30</td>\n",
+       "      <td>Madrid</td>\n",
+       "      <td>Cruz Hurtado</td>\n",
+       "      <td>Cruz Hurtado cruz.hurtado@example.com</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14997</th>\n",
+       "      <td>19aef6f3-3e85-4719-9dff-b768d9bfe5a9</td>\n",
+       "      <td>7539</td>\n",
+       "      <td>Jose Francisco</td>\n",
+       "      <td>Cortes</td>\n",
+       "      <td>jose francisco.cortes@example.com</td>\n",
+       "      <td>True</td>\n",
+       "      <td>2025-02-26</td>\n",
+       "      <td>2025-03-01</td>\n",
+       "      <td>2025-03-02</td>\n",
+       "      <td>186</td>\n",
+       "      <td>154.00</td>\n",
+       "      <td>Novotel Madrid Campo de las Naciones</td>\n",
+       "      <td>4.50</td>\n",
+       "      <td>Madrid</td>\n",
+       "      <td>Jose Francisco Cortes</td>\n",
+       "      <td>Jose Francisco Cortes jose francisco.cortes@ex...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14998</th>\n",
+       "      <td>aa092c3e-7fe6-4985-a5a8-cacd38554b1b</td>\n",
+       "      <td>13982</td>\n",
+       "      <td>Toño</td>\n",
+       "      <td>Narváez</td>\n",
+       "      <td>toño.narváez@example.com</td>\n",
+       "      <td>True</td>\n",
+       "      <td>2025-02-26</td>\n",
+       "      <td>2025-03-01</td>\n",
+       "      <td>2025-03-02</td>\n",
+       "      <td>114</td>\n",
+       "      <td>119.00</td>\n",
+       "      <td>ibis budget Madrid Centro las Ventas</td>\n",
+       "      <td>4.30</td>\n",
+       "      <td>Madrid</td>\n",
+       "      <td>Toño Narváez</td>\n",
+       "      <td>Toño Narváez toño.narváez@example.com</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14999</th>\n",
+       "      <td>6d1f590c-ae87-4582-bc99-9b8cbf1d8e28</td>\n",
+       "      <td>3524</td>\n",
+       "      <td>Custodia</td>\n",
+       "      <td>Marco</td>\n",
+       "      <td>custodia.marco@example.com</td>\n",
+       "      <td>True</td>\n",
+       "      <td>2025-02-26</td>\n",
+       "      <td>2025-03-01</td>\n",
+       "      <td>2025-03-02</td>\n",
+       "      <td>194</td>\n",
+       "      <td>116.00</td>\n",
+       "      <td>ibis Madrid Aeropuerto Barajas</td>\n",
+       "      <td>4.40</td>\n",
+       "      <td>Madrid</td>\n",
+       "      <td>Custodia Marco</td>\n",
+       "      <td>Custodia Marco custodia.marco@example.com</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>15000 rows × 17 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                 id_reserva id_cliente          nombre  \\\n",
+       "0      40c4cb55-d1f5-407b-832f-4756b8ff77b4       9063           Maite   \n",
+       "1      f2ce8df5-7844-43e1-8c0f-97ce7a208f21      13646           Tecla   \n",
+       "2      57d4515a-447d-4067-afcb-9bdcf4e4e915        993         Amílcar   \n",
+       "3      ccbd9fe9-5a60-4f6f-bed3-73a7158ecba7       7371            Joan   \n",
+       "4      99c3dc4f-663c-45f7-849a-ac9313f3746a       2839           Chelo   \n",
+       "...                                     ...        ...             ...   \n",
+       "14995  e856adee-838c-4031-920c-05ec5f1e32e6       7312          Jesusa   \n",
+       "14996  77134049-6e4f-49b0-a6f8-93b7466b1c22       3479            Cruz   \n",
+       "14997  19aef6f3-3e85-4719-9dff-b768d9bfe5a9       7539  Jose Francisco   \n",
+       "14998  aa092c3e-7fe6-4985-a5a8-cacd38554b1b      13982            Toño   \n",
+       "14999  6d1f590c-ae87-4582-bc99-9b8cbf1d8e28       3524        Custodia   \n",
+       "\n",
+       "        apellido                               mail  competencia  \\\n",
+       "0      Calatayud        maite.calatayud@example.com        False   \n",
+       "1          Bonet            tecla.bonet@example.com        False   \n",
+       "2         Andrés         amílcar.andrés@example.com        False   \n",
+       "3        Vazquez           joan.vazquez@example.com        False   \n",
+       "4           Flor             chelo.flor@example.com        False   \n",
+       "...          ...                                ...          ...   \n",
+       "14995   Espinosa        jesusa.espinosa@example.com         True   \n",
+       "14996    Hurtado           cruz.hurtado@example.com         True   \n",
+       "14997     Cortes  jose francisco.cortes@example.com         True   \n",
+       "14998    Narváez           toño.narváez@example.com         True   \n",
+       "14999      Marco         custodia.marco@example.com         True   \n",
+       "\n",
+       "      fecha_reserva inicio_estancia final_estancia  id_hotel  precio_noche  \\\n",
+       "0        2025-02-09      2025-03-01     2025-03-02        12        119.96   \n",
+       "1        2025-02-08      2025-03-01     2025-03-02         2        211.53   \n",
+       "2        2025-02-02      2025-03-01     2025-03-02         3        378.37   \n",
+       "3        2025-02-08      2025-03-01     2025-03-02        14         85.45   \n",
+       "4        2025-02-09      2025-03-01     2025-03-02         5        309.80   \n",
+       "...             ...             ...            ...       ...           ...   \n",
+       "14995    2025-02-26      2025-03-01     2025-03-02       135        107.00   \n",
+       "14996    2025-02-26      2025-03-01     2025-03-02       128         95.00   \n",
+       "14997    2025-02-26      2025-03-01     2025-03-02       186        154.00   \n",
+       "14998    2025-02-26      2025-03-01     2025-03-02       114        119.00   \n",
+       "14999    2025-02-26      2025-03-01     2025-03-02       194        116.00   \n",
+       "\n",
+       "                               nombre_hotel  valoracion  ciudad  \\\n",
+       "0                         Hotel Monte Verde        3.10  Madrid   \n",
+       "1                      Hotel Brisas del Mar        3.09  Madrid   \n",
+       "2                      Hotel Camino del Sol        3.07  Madrid   \n",
+       "3                    Hotel Puerta del Cielo        3.03  Madrid   \n",
+       "4                        Hotel Encanto Real        3.03  Madrid   \n",
+       "...                                     ...         ...     ...   \n",
+       "14995           ibis budget Madrid Vallecas        4.30  Madrid   \n",
+       "14996       ibis budget Madrid Calle Alcalá        4.30  Madrid   \n",
+       "14997  Novotel Madrid Campo de las Naciones        4.50  Madrid   \n",
+       "14998  ibis budget Madrid Centro las Ventas        4.30  Madrid   \n",
+       "14999        ibis Madrid Aeropuerto Barajas        4.40  Madrid   \n",
+       "\n",
+       "             nombre_completo  \\\n",
+       "0            Maite Calatayud   \n",
+       "1                Tecla Bonet   \n",
+       "2             Amílcar Andrés   \n",
+       "3               Joan Vazquez   \n",
+       "4                 Chelo Flor   \n",
+       "...                      ...   \n",
+       "14995        Jesusa Espinosa   \n",
+       "14996           Cruz Hurtado   \n",
+       "14997  Jose Francisco Cortes   \n",
+       "14998           Toño Narváez   \n",
+       "14999         Custodia Marco   \n",
+       "\n",
+       "                                    nombre_completo_mail  id_ciudad  \n",
+       "0            Maite Calatayud maite.calatayud@example.com          1  \n",
+       "1                    Tecla Bonet tecla.bonet@example.com          1  \n",
+       "2              Amílcar Andrés amílcar.andrés@example.com          1  \n",
+       "3                  Joan Vazquez joan.vazquez@example.com          1  \n",
+       "4                      Chelo Flor chelo.flor@example.com          1  \n",
+       "...                                                  ...        ...  \n",
+       "14995        Jesusa Espinosa jesusa.espinosa@example.com          1  \n",
+       "14996              Cruz Hurtado cruz.hurtado@example.com          1  \n",
+       "14997  Jose Francisco Cortes jose francisco.cortes@ex...          1  \n",
+       "14998              Toño Narváez toño.narváez@example.com          1  \n",
+       "14999          Custodia Marco custodia.marco@example.com          1  \n",
+       "\n",
+       "[15000 rows x 17 columns]"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_final.drop_duplicates()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 28,
    "metadata": {},
    "outputs": [
