Exploracion inicial actualizada

--- a/notebooks/consultas_BBDD.ipynb
+++ b/notebooks/consultas_BBDD.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
        "[(15000,)]"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +112,7 @@
        "[(15000,)]"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +246,7 @@
        "9      Ángeles Nuñez      14811          696.65"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -324,7 +324,7 @@
        "'No hay n ingún registro'"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -355,14 +355,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'No hay n ingún registro'"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "num_eventos = ejecutar_query(\n",
+    "    \"\"\"\n",
+    "    select \n",
+    "        h.nombre_hotel,\n",
+    "        SUM(r.precio_noche)AS Total_Reserva\n",
+    "    from \n",
+    "        hoteles h\n",
+    "        inner join reservas r on h.id_hotel = r.id_hotel\n",
+    "    where \n",
+    "        h.competencia = true \n",
+    "    group by h.id_hotel\n",
+    "    order by Total_Reserva desc\n",
+    "    limit 1;\n",
+    "    \"\"\")\n",
+    "\n",
+    "top_hotel_comp_recuadacion\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
