--- a/notebooks/inicial.ipynb
+++ b/notebooks/inicial.ipynb
@@ -1989,7 +1989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2004,7 +2004,6 @@
     }
    ],
    "source": [
-    "# Eliminamos duplicados\n",
     "df.duplicated().sum()"
    ]
   },
@@ -8290,6 +8289,37 @@
    ],
    "source": [
     "df_propios"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<bound method IndexOpsMixin.nunique of 2        12\n",
+       "3         2\n",
+       "4         3\n",
+       "5        14\n",
+       "6         5\n",
+       "         ..\n",
+       "14992     6\n",
+       "14994    15\n",
+       "14995     6\n",
+       "14997     2\n",
+       "14999    18\n",
+       "Name: id_hotel, Length: 9828, dtype: int64>"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_propios[\"id_hotel\"].nunique"
    ]
   },
   {
