Actualizacion Carga BBDD y otros

--- a/notebook_limpio/consultas_BBDD_limpio.ipynb
+++ b/notebook_limpio/consultas_BBDD_limpio.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +240,7 @@
        "9      Ángeles Nuñez      14811          696.65"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -386,21 +386,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El día que más eventos hay es: 2025-02-02\n"
+     ]
+    }
+   ],
    "source": [
-    "# dia_max_eventos = ejecutar_query(\n",
-    "#     \"\"\"\n",
-    "    \n",
-    "#     \"\"\")\n",
+    "dia_max_eventos = ejecutar_query(\n",
+    "    \"\"\"\n",
+    "    select \n",
+    "        r.fecha_reserva, \n",
+    "        COUNT(r.id_reserva) as total_reservas\n",
+    "    from \n",
+    "        reservas r\n",
+    "    join \n",
+    "        hoteles h on r.id_hotel = h.id_hotel\n",
+    "    where \n",
+    "        h.competencia = false\n",
+    "    group by r.fecha_reserva\n",
+    "    order by total_reservas desc\n",
+    "    limit 1;\n",
+    "    \"\"\")\n",
     "\n",
-    "# print(f\"El día que más eventos hay es: {dia_max_eventos[0][0]}\")"
+    "print(f\"El día que más eventos hay es: {dia_max_eventos[0][0]}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
