--- a/notebook_limpio/inicial_limpio.ipynb
+++ b/notebook_limpio/inicial_limpio.ipynb
@@ -527,7 +527,7 @@
    "metadata": {},
    "source": [
     "Vemos que solo un 0.5% de valores de las fecha de incio y fin de estancia no se han podido convertir.   \n",
-    "`TO-DO`: Analizar la distribución de los valores y determinar cómo rellenar los nulos  \n",
+    "`TO-DO`: Determinar cómo rellenar estos 0.5% de nulos  \n",
     "Por otro lado: `TO-DO`: revisar los datos de fecha_reserva nulos (34.48%)."
    ]
   },
@@ -904,13 +904,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Eliminamos la columna id_hotel_str para evitar ruido"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
@@ -928,6 +921,13 @@
    ],
    "source": [
     "df.shape[1]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Eliminamos la columna id_hotel_str para evitar ruido"
    ]
   },
   {
