Carga BBDD limpio

--- a/notebook_limpio/carga_BBDD_limpio.ipynb
+++ b/notebook_limpio/carga_BBDD_limpio.ipynb
@@ -40,63 +40,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# conn_alchemy = engine.connect()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# def carga_bbdd(dataframe, tabla, id):\n",
-    "    \n",
-    "#     resultado_query = \"Todos los valores ya existían en la BBDD\"\n",
-    "\n",
-    "#     try:\n",
-    "#         query_existentes = text(f\"SELECT {id} FROM {tabla}\") # Con el uso de text evitamos inyecciones de SQL en el SELECT (se parametriza la consulta)\n",
-    "#         df_valores_existentes = pd.read_sql(query_existentes, con=engine)\n",
-    "#     except Exception as e:\n",
-    "#         resultado_query = f\"No se ha podido acceder a los registros de la BBDD:\\n {e}\"\n",
-    "#         return resultado_query\n",
-    "\n",
-    "#     df_valores_nuevos = dataframe[dataframe[id].isin(df_valores_existentes[id]) == False]\n",
-    "\n",
-    "#     if not df_valores_nuevos.empty:\n",
-    "#         df_valores_nuevos.to_sql(tabla, con=engine, if_exists=\"append\", index=False, method=\"multi\") # method=\"multi\" permite una carga más rápida de múltiples filas\n",
-    "#         resultado_query = f\"{df_valores_nuevos.shape[0]} valores nuevos insertados en la tabla {tabla}\"\n",
-    "    \n",
-    "#     return resultado_query"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# def prueba_insertar_registros(columnas):\n",
-    "#     if len(columnas) == 1:\n",
-    "#         cols = columnas[0]\n",
-    "#         print(cols)\n",
-    "#         values = \":\"+ columnas[0]\n",
-    "#         print(values)\n",
-    "#     else:\n",
-    "#         cols = \", \".join(columnas)\n",
-    "#         print(cols)\n",
-    "#         values = \", :\".join(columnas)\n",
-    "#         values = \":\" + values\n",
-    "#         print(values)\n",
-    "\n",
-    "# prueba_insertar_registros([\"Madrid\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
    "outputs": [],
@@ -231,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -246,22 +189,9 @@
     }
    ],
    "source": [
-    "lista_ciudad = [\"Madrid\"]\n",
-    "df_ciudad = pd.DataFrame(lista_ciudad, columns = [\"nombre_ciudad\"])\n",
+    "df_ciudad = pd.DataFrame([\"Madrid\"], columns = [\"nombre_ciudad\"])\n",
     "\n",
     "insertar_registros(df_ciudad, \"ciudad\", \"nombre_ciudad\", [\"nombre_ciudad\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# lista_ciudad = [\"Madrid\"]\n",
-    "# df_ciudad = pd.DataFrame(lista_ciudad, columns = [\"nombre_ciudad\"])\n",
-    "\n",
-    "# df_ciudad.to_sql(\"ciudad\", con=engine, if_exists=\"append\", index=False)"
    ]
   },
   {
@@ -295,18 +225,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# df_tabla_eventos = df_eventos[[\"nombre_evento\", \"url_evento\", \"codigo_postal\", \"direccion\", \"horario\", \"fecha_inicio\", \"fecha_fin\", \"organizacion\", \"id_ciudad\" ]]\n",
-    "\n",
-    "# resultado_carga_tabla_eventos = carga_bbdd(df_tabla_eventos, \"eventos\", \"nombre_evento\") \n",
-    "# print(resultado_carga_tabla_eventos)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -337,18 +255,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# df_tabla_hoteles = (df_hoteles[[\"nombre_hotel\", \"competencia\", \"valoracion\", \"id_ciudad\"]].drop_duplicates(subset=[\"nombre_hotel\"]))\n",
-    "\n",
-    "# resultado_carga_tabla_hoteles = carga_bbdd(df_tabla_hoteles, \"hoteles\", \"nombre_hotel\") # Verifico por nombre porque id_hotel es serial en la BBDD\n",
-    "# print(resultado_carga_tabla_hoteles)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -376,17 +282,6 @@
     "df_tabla_clientes = df_hoteles[cols_clientes].drop_duplicates(subset=\"id_cliente\")\n",
     "\n",
     "insertar_registros(df_tabla_clientes, \"clientes\", \"id_cliente\", cols_clientes)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# df_tabla_clientes = df_hoteles[[\"id_cliente\", \"nombre\", \"apellido\", \"mail\"]].drop_duplicates(subset=\"id_cliente\")\n",
-    "# resultado_carga_tabla_clientes = carga_bbdd(df_tabla_clientes, \"clientes\", \"id_cliente\") \n",
-    "# print(resultado_carga_tabla_clientes)"
    ]
   },
   {
@@ -431,27 +326,6 @@
     "df_tabla_reservas['nombre_hotel'] = df_tabla_reservas.groupby('id_hotel').ngroup() + 1\n",
     "\n",
     "insertar_registros(df_tabla_reservas, \"reservas\", \"id_reserva\", cols_reservas)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# df_tabla_reservas = df_hoteles[[\"id_reserva\", \"fecha_reserva\", \"inicio_estancia\", \"final_estancia\", \"precio_noche\",\"id_cliente\", \"id_hotel\"]]\n",
-    "# df_tabla_reservas['nombre_hotel'] = df_tabla_reservas.groupby('id_hotel').ngroup() + 1\n",
-    "# resultado_carga_tabla_reservas = carga_bbdd(df_tabla_reservas, \"reservas\", \"id_reserva\") \n",
-    "# print(resultado_carga_tabla_reservas)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# conn_alchemy.close()"
    ]
   },
   {
