--- a/notebook_limpio/carga_BBDD_limpio.ipynb
+++ b/notebook_limpio/carga_BBDD_limpio.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,8 +48,8 @@
     "\n",
     "    try:\n",
     "\n",
-    "        tabla_alchemy = sqlalchemy.sql.table(tabla, column(id)) # Crea un objeto table y le pasamos las columnas a las que queremos acceder después \n",
-    "        query_alchemy_existentes = sqlalchemy.sql.select(tabla_alchemy.c[id]) # Creamos la consulta SELECT accediendo a la columna id que hemos definido antes\n",
+    "        tabla_alchemy = table(tabla, column(id)) # Crea un objeto table y le pasamos las columnas a las que queremos acceder después \n",
+    "        query_alchemy_existentes = select(tabla_alchemy.c[id]) # Creamos la consulta SELECT accediendo a la columna id que hemos definido antes\n",
     "        df_valores_existentes = pd.read_sql(query_alchemy_existentes, con=engine)   # Ejecutamos la consulta\n",
     "\n",
     "        # query_existentes = text(f\"SELECT :{id} FROM :{tabla}\") \n",
